# testPDM

./: README.md  pushToGitHub.pl  pyproject.toml
.github/workflows/: main.yml
src/testpdm/: aaa.py  bbb.py
