[project]
name = "testPdm"
version = "1.0.0"
description = "Test PDM"
authors = [
    {name = "Philip R Brenan", email = "philiprbrenan@gmail.com"},
]
dependencies = []
requires-python = ">=3"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
testPdmAaa = "testpdm.aaa:aaa"
testPdmBbb = "testpdm.bbb:bbb"
