[project]
name = "testPdm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Philip R Brenan", email = "philiprbrenan@gmail.com"},
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[project.scripts]
testPdmAaa = "testpdm.aaa:aaa"
testPdmBbb = "testpdm.bbb:bbb"
